src/objects/PSA_Time_Zone__c.object
<CustomObject>
    <description>Used to map Workday Time Zone values to Salesforce User Record Time Zone picklist values</description>
    <fields>
        <fullName>PSA_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Salesforce_Time_Zone__c</fullName>
        <label>Salesforce Time Zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Workday_Time_Zone__c</fullName>
        <label>Workday Time Zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Time Zone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Salesforce_Time_Zone__c</columns>
        <columns>PSA_Workday_Time_Zone__c</columns>
        <columns>PSA_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TZ-{000}</displayFormat>
        <label>Time Zone Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>